[package]
name = "disease"
version = "0.1.0"
authors = ["Lou Knauer <lou.knauer98@gmail.com>", "Stefan Gehr <stefan.gehr@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Me Testing WebAssembly"
repository = "https://github.com/iamlouk/automaton"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.36"
wasm-bindgen = "0.2.59"
rand = "*"

[dependencies.web-sys]
version = "0.3.4"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window']

