[package]
name = "inverse-square-law"
version = "0.1.0"
authors = ["Lou Knauer <lou.knauer98@gmail.com>", "Stefan Gehr <stefan.gehr@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "simulation of charged particles"
repository = "https://gitlab.com/iamlouk/simulations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.36"
wasm-bindgen = "0.2.59"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
base64 = "*"

[dependencies.web-sys]
version = "0.3.4"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'console']

